2013-07-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Check for math library.
	* Source/CFAttributedString.c,
	* Source/CFData.c,
	* Source/CFError.c,
	* Source/CFDate.c,
	* Source/CFNumber.c,
	* Source/CFRunLoop.c,
	* Source/CFRuntime.c,
	* Source/CFURL.c: Use CF_OBJC_FUNCDISPATCHV.
	* Source/CFStringEncoding.c: Fix character Unicode conversion.
	* Source/GSHashTable.h: Use GS_PRIVATE for hidden functions.
	* Source/GSPrivate.h: Add GS_PRIVATE for hidden visibility functions.
	Remove CF_OBJC_FUNCDISPATCH[012345] in favor of CF_OBJC_FUNCDISPATCHV.

2013-07-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFStringEncoding.c: Fix ASCII conversion.

2013-07-03 Ivan Vucica <ivan@vucica.net>

	* Source/CFNumber.c: Improved the way INFINITY and NAN are defined,
	preferring to only get them from <math.h>, and using hacks in case
	<math.h> does not define them for some reason.
	* Headers/CoreFoundation/CFBase.h: Replaced manual definitions of
	MAC_OS_X_VERSION macros with inclusion of GSVersionMacros.h. This
	fixes the issue where the macros were sometimes defined multiple,
	and fixes the issue where the macros were (by now) no longer
	matching values in GNUstep Base.

2013-06-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Check for existance of ICU headers.
	* Source/CFString.c: Only build ICU support if headers are installed.
	* Source/CFStringEncoding.c: Incorporate nonlossy ASCII conversion
	function.  Check ICU headers.
	* Source/CFRuntime.c: Only check for small objects if they are
	supported.
	* Source/NSCFTimeZone.m,
	* Tests/CFLocale/bridge.m,
	* Tests/CFDictionary/bridge.m,
	* Tests/CFArray/bridge.m: Include Foundation/NSString.h.

2013-06-08 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFRuntime.c: fix a TFB crash with small objects
	* Source/GNUmakefile.in,
	* Tests/GNUmakefile.super: remove a macro that causes all OS X Base
	methods to be unavailable
	* Source/CFTimeZone.c,
	* Source/NSCFTimeZone.m,